--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleAppWithGroupsAndSegmentsInferHintsNoGivenHints_NoHint_InferHints/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleAppWithGroupsAndSegmentsInferHintsNoGivenHints_NoHint_InferHints/policies.yaml
@@ -13,13 +13,7 @@ spec:
             - port: 80
               protocol: TCP
           to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - T1-192-168-0-0
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__foo-backend
                       operator: Exists
@@ -42,13 +36,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - T1-192-168-0-0
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__foo-frontend
                       operator: Exists
@@ -141,13 +129,7 @@ spec:
             - port: 443
               protocol: TCP
           to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - T1-192-168-1-0
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__bar-app
                       operator: Exists
@@ -170,13 +152,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - T1-192-168-1-0
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__bar-app
                       operator: Exists
