--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup3/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup3/policies.yaml
@@ -13,13 +13,7 @@ spec:
             - port: 445
               protocol: TCP
           to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__research-test-expr-2
                       operator: Exists
@@ -74,13 +68,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__foo-app
                       operator: Exists
