--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
@@ -158,13 +158,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg_2-3
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: in_Segment__seg_2-3
                       operator: Exists
@@ -278,13 +272,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg-6-7
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: in_Segment__seg-6-7
                       operator: Exists
@@ -684,13 +672,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg-8
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: in_Segment__seg-8
                       operator: Exists
@@ -915,13 +897,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - seg-9-10
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: in_Segment__seg-9-10
                       operator: Exists
@@ -1045,13 +1021,7 @@ metadata:
 spec:
     egress:
         - to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
@@ -1078,13 +1048,7 @@ metadata:
 spec:
     ingress:
         - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
+            - podSelector:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
