--- a/pkg/synthesis/tests_expected_output/optimization_level_tests/ExampleAppWithGroupsAndSegments_moderate/k8s_resources/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/optimization_level_tests/ExampleAppWithGroupsAndSegments_moderate/k8s_resources/policies.yaml
@@ -2,56 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: NetworkPolicy to allow access to DNS for namespace T1-192-168-0-0
-        nsx-id: none
-    creationTimestamp: null
-    name: dns-policy-T1-192-168-0-0
-    namespace: T1-192-168-0-0
-spec:
-    egress:
-        - ports:
-            - port: 53
-              protocol: UDP
-          to:
-            - namespaceSelector: {}
-              podSelector:
-                matchLabels:
-                    k8s-app: kube-dns
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: NetworkPolicy to allow access to DNS for namespace T1-192-168-1-0
-        nsx-id: none
-    creationTimestamp: null
-    name: dns-policy-T1-192-168-1-0
-    namespace: T1-192-168-1-0
-spec:
-    egress:
-        - ports:
-            - port: 53
-              protocol: UDP
-          to:
-            - namespaceSelector: {}
-              podSelector:
-                matchLabels:
-                    k8s-app: kube-dns
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
         description: 'src: (group = foo-frontend) dst: (group = foo-backend) conn: TCP dst-ports: 80'
         nsx-id: "1027"
     creationTimestamp: null
-    name: policy-2
+    name: policy-0
     namespace: T1-192-168-0-0
 spec:
     egress:
@@ -77,7 +31,7 @@ metadata:
         description: 'src: (group = foo-frontend) dst: (group = foo-backend) conn: TCP dst-ports: 80'
         nsx-id: "1027"
     creationTimestamp: null
-    name: policy-3
+    name: policy-1
     namespace: T1-192-168-0-0
 spec:
     ingress:
@@ -103,7 +57,7 @@ metadata:
         description: 'src: (group = research-test-expr-2 and group != foo-app) dst: (group = foo-frontend) conn: TCP dst-ports: 445'
         nsx-id: "1025"
     creationTimestamp: null
-    name: policy-4
+    name: policy-2
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -134,10 +88,45 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'src: (group = research-test-expr-2) dst: (group = foo-frontend and group != foo-app) conn: TCP dst-ports: 445'
+        nsx-id: "1025"
+    creationTimestamp: null
+    name: policy-3
+    namespace: T1-192-168-1-0
+spec:
+    egress:
+        - ports:
+            - port: 445
+              protocol: TCP
+          to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - T1-192-168-0-0
+                        - T1-192-168-1-0
+              podSelector:
+                matchExpressions:
+                    - key: group__foo-frontend
+                      operator: Exists
+                    - key: group__foo-app
+                      operator: DoesNotExist
+    podSelector:
+        matchExpressions:
+            - key: group__research-test-expr-2
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = research-test-expr-2 and group != foo-app) dst: (group = foo-frontend) conn: TCP dst-ports: 445'
         nsx-id: "1025"
     creationTimestamp: null
-    name: policy-5
+    name: policy-4
     namespace: T1-192-168-0-0
 spec:
     ingress:
@@ -168,10 +157,72 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'src: (group = research-test-expr-2) dst: (group = foo-frontend and group != foo-app) conn: TCP dst-ports: 445'
+        nsx-id: "1025"
+    creationTimestamp: null
+    name: policy-5
+    namespace: T1-192-168-0-0
+spec:
+    ingress:
+        - from:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - T1-192-168-1-0
+              podSelector:
+                matchExpressions:
+                    - key: group__research-test-expr-2
+                      operator: Exists
+          ports:
+            - port: 445
+              protocol: TCP
+    podSelector:
+        matchExpressions:
+            - key: group__foo-frontend
+              operator: Exists
+            - key: group__foo-app
+              operator: DoesNotExist
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (group = research-test-expr-2) dst: (group = foo-frontend and group != foo-app) conn: TCP dst-ports: 445'
+        nsx-id: "1025"
+    creationTimestamp: null
+    name: policy-6
+    namespace: T1-192-168-1-0
+spec:
+    ingress:
+        - from:
+            - podSelector:
+                matchExpressions:
+                    - key: group__research-test-expr-2
+                      operator: Exists
+          ports:
+            - port: 445
+              protocol: TCP
+    podSelector:
+        matchExpressions:
+            - key: group__foo-frontend
+              operator: Exists
+            - key: group__foo-app
+              operator: DoesNotExist
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = bar-app and group != foo-app) dst: (group = bar-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -199,7 +250,7 @@ metadata:
         description: 'src: (group = bar-app) dst: (group = bar-app and group != foo-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -227,7 +278,7 @@ metadata:
         description: 'src: (group = bar-app and group != foo-app) dst: (group = bar-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-8
+    name: policy-9
     namespace: T1-192-168-1-0
 spec:
     ingress:
@@ -255,7 +306,7 @@ metadata:
         description: 'src: (group = bar-app) dst: (group = bar-app and group != foo-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-9
+    name: policy-10
     namespace: T1-192-168-1-0
 spec:
     ingress:
